--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Papaya#123
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+# App Properties
+isolaja.app.jwtSecret=bezKoderSecretKey
+isolaja.app.jwtExpirationMs=86400000
